--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <title>Студия</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
-    <header>
+    <header class="container">
       <!-- navigation -->
       <nav>
         <a href="./index.html"
           ><p class="logo">Web<span>Studio</span></p></a
         >
-        <ul class="nav">
-          <li><a class="nav-linc current" href="./index.html">Студия</a></li>
-          <li><a class="nav-linc" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="nav-linc" href="./contact.html">Контакты</a></li>
+        <ul class="nav-items">
+          <li><a class="nav-item current" href="./index.html">Студия</a></li>
+          <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-item" href="./contact.html">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contacts">
         <li>
           <a class="nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -37,11 +37,13 @@
     <main>
       <!-- hero -->
       <section class="hero">
-        <h1>Эффективные решения<br />для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <div class="container">
+          <h1>Эффективные решения<br />для вашего бизнеса</h1>
+          <button type="button">Заказать услугу</button>
+        </div>
       </section>
       <!-- advantages -->
-      <section class="advantages">
+      <section class="advantages container">
         <h2>Преимущества</h2>
         <ul>
           <li>
@@ -63,71 +65,65 @@
         </ul>
       </section>
       <!-- working moments -->
-      <section class="working-moments">
+      <section class="working-moments container">
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li>
-            <img width="370" src="images/img_01.jpg" alt="Человек набирает код на клавиатуре" />
-            <img width="370" src="images/img_02.jpg" alt="Разработка пользовательского интерфейса" />
-            <img width="370" src="images/img_03.jpg" alt="Выбор цвета из палитры" />
-          </li>
+          <li><img width="370" src="images/img_01.jpg" alt="Человек набирает код на клавиатуре" /></li>
+          <li><img width="370" src="images/img_02.jpg" alt="Разработка пользовательского интерфейса" /></li>
+          <li><img width="370" src="images/img_03.jpg" alt="Выбор цвета из палитры" /></li>
         </ul>
       </section>
       <!-- our team -->
       <section class="our-team">
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <div>
+        <div class="container">
+          <h2>Наша команда</h2>
+          <ul>
+            <li>
               <img width="270" src="images/product_designer.jpg" alt="Игорь Демьяненко Product Designer" />
               <h3>Игорь Демьяненко</h3>
               <p>Product Designer</p>
-            </div>
-          </li>
-          <li>
-            <div>
+            </li>
+            <li>
               <img width="270" src="images/frontend_developer.jpg" alt="Ольга Репина Frontend Developer" />
               <h3>Ольга Репина</h3>
               <p>Frontend Developer</p>
-            </div>
-          </li>
+            </li>
 
-          <li>
-            <div>
+            <li>
               <img width="270" src="images/marketing.jpg" alt="Николай Тарасов Marketing" />
               <h3>Николай Тарасов</h3>
               <p>Marketing</p>
-            </div>
-          </li>
-          <li>
-            <div>
+            </li>
+            <li>
               <img width="270" src="images/ui_designer.jpg" alt="Михаил Ермаков UI Designer" />
               <h3>Михаил Ермаков</h3>
               <p>UI Designer</p>
-            </div>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer>
       <!-- Adress -->
-      <h2>Где нас найти</h2>
-      <a href="./index.html"
-        ><p class="logo">Web<span>Studio</span></p></a
-      >
+      <div class="container">
+        <h2>Где нас найти</h2>
+        <a href="./index.html"
+          ><p class="logo">Web<span>Studio</span></p></a
+        >
 
-      <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+        <address>
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <ul>
+            <li>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
