Добавил рамки в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,64 +46,82 @@
           <li>
             <a href="#">
               <img src="./images/Portfolio/01-tech.jpg" alt="Скриншот сайта" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <div class="card">
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/Portfolio/02-poster.jpg" alt="Игроки в баскетбол" />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <div class="card">
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </div>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/Portfolio/03-seafood.jpg" alt="Логотип ресторана" />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <div class="card">
+                <h2>Ресторан Seafood</h2>
+                <p>Приложение</p>
+              </div>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/Portfolio/04-prime.jpg" alt="Наушники" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <div class="card">
+                <h2>Проект Prime</h2>
+                <p>Маркетинг</p>
+              </div>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/Portfolio/05-boxes.jpg" alt="Дизайнерская упаковка" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <div class="card">
+                <h2>Проект Boxes</h2>
+                <p>Приложение</p>
+              </div>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/Portfolio/06-inspiraation.jpg" alt="Монитор с открытым сайтом" />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <div class="card">
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/Portfolio/07-limited.jpg" alt="Открытая книжка" />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <div class="card">
+                <h2>Издание Limited Edition</h2>
+                <p>Дизайн</p>
+              </div>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/Portfolio/08-lab.jpg" alt="Бирка" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <div class="card">
+                <h2>Проект LAB</h2>
+                <p>Маркетинг</p>
+              </div>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/Portfolio/09-growing.jpg" alt="Работа за ноутбуком" />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <div class="card">
+                <h2>Growing Business</h2>
+                <p>Приложение</p>
+              </div>
             </a>
           </li>
         </ul>
