--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
   </head>
 
   <body>
-    <header class="container">
+    <header>
       <!-- navigation -->
-      <nav>
-        <a href="./index.html"
-          ><p class="logo">Web<span>Studio</span></p></a
-        >
-        <ul class="nav-items">
-          <li><a class="nav-item current" href="./index.html">Студия</a></li>
-          <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="nav-item" href="./contact.html">Контакты</a></li>
+      <div class="container">
+        <nav>
+          <a href="./index.html"
+            ><p class="logo">Web<span>Studio</span></p></a
+          >
+          <ul class="nav-items">
+            <li><a class="nav-item current" href="./index.html">Студия</a></li>
+            <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="nav-item" href="./contact.html">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts">
+          <li>
+            <a class="nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="nav-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="contacts">
-        <li>
-          <a class="nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="nav-contact" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- hero -->
