поправил страничку контакты

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         </ul>
       </div>
     </header>
-    <main>Следующее домашнее задание.</main>
+    <main><h1 class="contact">Следующее домашнее задание.</h1></main>
     <footer>
       <!-- Adress -->
       <div class="container">
