--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         <ul class="sorter">
           <li><button>Все</button></li>
           <li><button>Веб-сайты</button></li>
-          <li><button>Gриложения</button></li>
+          <li><button>Приложения</button></li>
           <li><button>Дизайн</button></li>
           <li><button>Маркетинг</button></li>
         </ul>
